--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@types/node": "^18.15.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "eslint-config-standard-with-typescript": "^34.0.0"
   }
 }
