--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.15.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
