--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "@types/node": "^18.15.0",
+    "@types/validator": "^13.7.13",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.0",
@@ -24,6 +25,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "eslint-config-standard-with-typescript": "^34.0.0"
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "validator": "^13.9.0"
   }
 }
